test/spec_vectors/memory_copy64/ok/module_95.wat
(module (memory i64 1 1) (func (export "test") (memory.copy (i64.const 131072) (i64.const 131072) (i64.const 0))))